Almost final edits

--- a/zillo-report.ipynb
+++ b/zillo-report.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 46,
    "id": "37d2e11c",
    "metadata": {},
    "outputs": [],
@@ -61,6 +61,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.impute import SimpleImputer\n",
     "import statsmodels.api as sm\n",
+    "from statsmodels.formula.api import ols\n",
     "\n",
     "from datetime import date\n",
     "from scipy import stats\n",
@@ -647,17 +648,312 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "218db563",
+   "metadata": {},
+   "source": [
+    "First, I will build a minimal model using only bedrooms, bathrooms, and area."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "id": "4aa3e07a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My model has value: True\n",
+      "\n",
+      "Baseline RMSE: 235257\n",
+      "My model train RMSE: 209005\n",
+      "My model validate RMSE: 210823\n",
+      "RMSE difference baseline to model: 26252\n",
+      "RMSE difference train to validate: -1818\n",
+      "RMSE improvement: -11.16%\n",
+      "\n",
+      "Baseline R2: -0.02\n",
+      "Model train  R2: 0.2\n",
+      "Model Validate R2: 0.19\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create Model\n",
+    "ols_model = ols(formula='home_value ~ bedrooms + bathrooms + square_feet', data=train).fit()\n",
+    "\n",
+    "# Make predictions\n",
+    "ols_yhat = ols_model.predict(X_train)\n",
+    "X_train['mvp_prdictions']=ols_yhat\n",
+    "\n",
+    "#  DataFrame for evaluating model \n",
+    "ols_eval = y_train.copy()\n",
+    "validate_eval = y_validate.copy()\n",
+    "ols_eval = pd.DataFrame(ols_eval)\n",
+    "validate_eval = pd.DataFrame(validate_eval)\n",
+    "ols_eval.rename(columns={'home_value': 'actual'}, inplace=True)\n",
+    "validate_eval.rename(columns={'home_value': 'actual'}, inplace=True)\n",
+    "\n",
+    "# Add baseline - median home value\n",
+    "ols_eval['baseline_yhat'] = ols_eval['actual'].median()\n",
+    "validate_eval['baseline_yhat'] = ols_eval['actual'].median()\n",
+    "\n",
+    "# Add model prediction\n",
+    "ols_eval['ols_yhat'] = ols_model.predict(X_train)\n",
+    "validate_eval['ols_yhat'] = ols_model.predict(X_validate)\n",
+    "\n",
+    "# Calculate and Add Residuals Column for Plotting\n",
+    "ols_eval['residuals'] = ols_eval.ols_yhat - ols_eval.actual\n",
+    "validate_eval['residuals'] = validate_eval.ols_yhat - validate_eval.actual\n",
+    "\n",
+    "#  Compute the RMSE  and R2 for  ols model and baseline \n",
+    "baseline_RMSE = round(sqrt(mean_squared_error(ols_eval.actual, ols_eval.baseline_yhat)))\n",
+    "ols_RMSE = round(sqrt(mean_squared_error(ols_eval.actual, ols_eval.ols_yhat)))\n",
+    "pct_change=round(((ols_RMSE-baseline_RMSE)/baseline_RMSE)*100, 2)\n",
+    "rmse_validate = round(sqrt(mean_squared_error(validate_eval.actual, validate_eval.ols_yhat)))\n",
+    "baseline_r2 = round(r2_score(ols_eval.actual, ols_eval.baseline_yhat), 2)\n",
+    "ols_train_r2 = round(r2_score(ols_eval.actual, ols_eval.ols_yhat), 2)\n",
+    "ols_validate_r2 = round(r2_score(validate_eval.actual, validate_eval.ols_yhat), 2)\n",
+    "\n",
+    "#Output Findings\n",
+    "\n",
+    "print(f'My model has value: {ols_RMSE < baseline_RMSE}')\n",
+    "print()\n",
+    "print(f'Baseline RMSE: {baseline_RMSE}')\n",
+    "print(f'My model train RMSE: {ols_RMSE}')\n",
+    "print(f'My model validate RMSE: {rmse_validate}')\n",
+    "print(f'RMSE difference baseline to model: {baseline_RMSE- ols_RMSE}')\n",
+    "print(f'RMSE difference train to validate: {ols_RMSE- rmse_validate}')\n",
+    "print(f'RMSE improvement: {pct_change}%')\n",
+    "print()\n",
+    "print(f'Baseline R2: {baseline_r2}')\n",
+    "print(f'Model train  R2: {ols_train_r2}')\n",
+    "print(f'Model Validate R2: {ols_validate_r2}')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82179d2e",
+   "metadata": {},
+   "source": [
+    "- Model improves from baseline prediction\n",
+    "- RMSE and R2 similar for train and validate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73781eeb",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "0b3d10e6",
    "metadata": {},
+   "source": [
+    "### Make second OLS model including age"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "3c8db4ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My model has value: True\n",
+      "My model beats previous model: True\n",
+      "\n",
+      "Baseline RMSE: 235257\n",
+      "Model 1 RMSE: 209005\n",
+      "Currennt model train RMSE: 208989\n",
+      "Currennt model validate RMSE: 210802\n",
+      "\n",
+      "Current model RMSE difference from baseline: 26252\n",
+      "RMSE difference train to validate: -1813\n",
+      "Current model baseline RMSE improvement: -11.16%\n",
+      "Current model RMSE improvement from last model: -0.01%\n",
+      "\n",
+      "Baseline R2: -0.02\n",
+      "Model train  R2: 0.2\n",
+      "Model Validate R2: 0.19\n"
+     ]
+    }
+   ],
+   "source": [
+    "ols2_model = ols(formula='home_value ~ bedrooms + bathrooms + square_feet + age',  data=train).fit() #Create model\n",
+    "ols2_yhat = ols2_model.predict(X_train) # Make predictions\n",
+    "X_train['model2']=ols2_yhat\n",
+    "# Add to eval\n",
+    "ols_eval['ols2_yhat'] = ols2_model.predict(X_train)\n",
+    "validate_eval['ols2_yhat'] = ols2_model.predict(X_validate)\n",
+    "ols_eval['ols2_residuals'] = ols_eval.ols2_yhat - ols_eval.actual\n",
+    "validate_eval['ols2_residuals'] = validate_eval.ols2_yhat - validate_eval.actual\n",
+    "#Calculate Evaluation metrics\n",
+    "baseline_RMSE = round(sqrt(mean_squared_error(ols_eval.actual, ols_eval.baseline_yhat)))\n",
+    "ols_RMSE = round(sqrt(mean_squared_error(ols_eval.actual, ols_eval.ols_yhat)))\n",
+    "ols2_RMSE = round(sqrt(mean_squared_error(ols_eval.actual, ols_eval.ols2_yhat)))\n",
+    "pct_change_baseline=round(((ols_RMSE-baseline_RMSE)/baseline_RMSE)*100, 2)\n",
+    "pct_change_last_model=round(((ols2_RMSE-ols_RMSE)/ols_RMSE)*100, 2)\n",
+    "rmse_validate = round(sqrt(mean_squared_error(validate_eval.actual, validate_eval.ols2_yhat)))\n",
+    "baseline_r2 = round(r2_score(ols_eval.actual, ols_eval.baseline_yhat), 2)\n",
+    "ols2_train_r2 = round(r2_score(ols_eval.actual, ols_eval.ols2_yhat), 2)\n",
+    "ols2_validate_r2 = round(r2_score(validate_eval.actual, validate_eval.ols2_yhat), 2)\n",
+    "# Display findings\n",
+    "print(f'My model has value: {ols_RMSE < baseline_RMSE}')\n",
+    "print(f'My model beats previous model: {ols2_RMSE < ols_RMSE}')\n",
+    "print()\n",
+    "print(f'Baseline RMSE: {baseline_RMSE}')\n",
+    "print(f'Model 1 RMSE: {ols_RMSE}')\n",
+    "print(f'Currennt model train RMSE: {ols2_RMSE}')\n",
+    "print(f'Currennt model validate RMSE: {rmse_validate}')\n",
+    "print()\n",
+    "print(f'Current model RMSE difference from baseline: {baseline_RMSE- ols_RMSE}')\n",
+    "print(f'RMSE difference train to validate: {ols2_RMSE- rmse_validate}')\n",
+    "print(f'Current model baseline RMSE improvement: {pct_change_baseline}%')\n",
+    "print(f'Current model RMSE improvement from last model: {pct_change_last_model}%')\n",
+    "print()\n",
+    "print(f'Baseline R2: {baseline_r2}')\n",
+    "print(f'Model train  R2: {ols2_train_r2}')\n",
+    "print(f'Model Validate R2: {ols2_validate_r2}')\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "378dde2e",
+   "metadata": {},
+   "source": [
+    "- Model adding age improves from previous model\n",
+    "- RMSE and R2 similar for training and validate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c73832b6",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c22890e1",
+   "metadata": {},
+   "source": [
+    "### Make third OLS model incorporating counties"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "e5c0f69c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My model has value: True\n",
+      "My model beats previous model: True\n",
+      "\n",
+      "Baseline RMSE: 235257\n",
+      "Model 1 RMSE: 209005\n",
+      "Model 2 RMSE: 208989\n",
+      "Current model RMSE: 207035\n",
+      "\n",
+      "Current model RMSE difference from baseline: 28222\n",
+      "Current model baseline RMSE improvement: -12.0%\n",
+      "Current model RMSE improvement from last model: -0.93%\n",
+      "\n",
+      "Baseline R2: -0.02\n",
+      "Current Model train  R2: 0.21\n",
+      "Current Model Validate R2: 0.21\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Make model and predictions\n",
+    "ols3_model = ols(formula='home_value ~ bedrooms + bathrooms + square_feet + age + county_Orange + county_Ventura',  data=train).fit() #Create model\n",
+    "ols3_yhat = ols3_model.predict(X_train) # Make predictions\n",
+    "X_train['model3']=ols3_yhat\n",
+    "ols_eval['ols3_yhat'] = ols3_model.predict(X_train)\n",
+    "ols_eval['ols3_residuals'] = ols_eval.ols3_yhat - ols_eval.actual\n",
+    "validate_eval['ols3_yhat'] = ols3_model.predict(X_validate)\n",
+    "validate_eval['ols3_residuals'] = validate_eval.ols3_yhat - validate_eval.actual\n",
+    "# Calculate evaluation metrics\n",
+    "baseline_RMSE = round(sqrt(mean_squared_error(ols_eval.actual, ols_eval.baseline_yhat)))\n",
+    "ols_RMSE = round(sqrt(mean_squared_error(ols_eval.actual, ols_eval.ols_yhat)))\n",
+    "ols2_RMSE = round(sqrt(mean_squared_error(ols_eval.actual, ols_eval.ols2_yhat)))\n",
+    "ols3_RMSE = round(sqrt(mean_squared_error(ols_eval.actual, ols_eval.ols3_yhat)))\n",
+    "\n",
+    "pct_change_baseline=round(((ols3_RMSE-baseline_RMSE)/baseline_RMSE)*100, 2)\n",
+    "pct_change_last_model=round(((ols3_RMSE-ols2_RMSE)/ols2_RMSE)*100, 2)\n",
+    "\n",
+    "ols3_train_r2 = round(r2_score(ols_eval.actual, ols_eval.ols3_yhat), 2)\n",
+    "ols3_validate_r2 = round(r2_score(validate_eval.actual, validate_eval.ols3_yhat), 2)\n",
+    "# Display findings\n",
+    "print(f'My model has value: {ols3_RMSE < baseline_RMSE}')\n",
+    "print(f'My model beats previous model: {ols3_RMSE < ols2_RMSE}')\n",
+    "print()\n",
+    "print(f'Baseline RMSE: {baseline_RMSE}')\n",
+    "print(f'Model 1 RMSE: {ols_RMSE}')\n",
+    "print(f'Model 2 RMSE: {ols2_RMSE}')\n",
+    "print(f'Current model RMSE: {ols3_RMSE}')\n",
+    "print()\n",
+    "print(f'Current model RMSE difference from baseline: {baseline_RMSE- ols3_RMSE}')\n",
+    "print(f'Current model baseline RMSE improvement: {pct_change_baseline}%')\n",
+    "print(f'Current model RMSE improvement from last model: {pct_change_last_model}%')\n",
+    "print()\n",
+    "print(f'Baseline R2: {baseline_r2}')\n",
+    "print(f'Current Model train  R2: {ols3_train_r2}')\n",
+    "print(f'Current Model Validate R2: {ols3_validate_r2}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5322491",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77de6d46",
+   "metadata": {},
+   "source": [
+    "- I have generated three ols models.\n",
+    "- Each is an improvement from baseline and from the previous model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef77a625",
+   "metadata": {},
+   "source": [
+    "### Feature engineering / Model improvement\n",
+    "\n",
+    "- I have modeled using all of the originally considered data (area, bedrooms, bathrooms, age, and county).\n",
+    "- Go back to the original dataset to find additional features to model on.\n",
+    "- Consider feature engineering to combine or create addtional meaningful features."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1953c884",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
